--- a/widget/html/viewHistory.html
+++ b/widget/html/viewHistory.html
@@ -28,7 +28,8 @@
             </nav>
         </header>
         <div id="main">
-            <div class="field" onclick="openWin('viewPatient');">
+            <!-- <div class="field" onclick="openWin('viewPatient');"> -->
+            <div class="field" onclick="openFrame('viewPatient');">
                 <div class="field_name"><span id="patient_info"></span></div>
                 <div class="more"><span>&gt;</span></div>
             </div>
@@ -104,6 +105,30 @@ apiready = function() {
 
     $api.byId('patient_info').innerText = patient_pointer.name + " - " + patient_pointer.gender + " - " + patient_pointer.age + "岁";
 
+}
+
+function openFrame(page) {
+    api.openFrame({
+        name: page,
+        url: './' + page + '.html',
+        pageParam: {
+            data: patient_pointer,
+            type: "view"
+        },
+        reload: false,
+        bounces: true,
+        rect: {
+            marginLeft: 15, //相对父window左外边距的距离
+            marginTop: 15, //相对父window上外边距的距离
+            marginBottom: 15, //相对父window下外边距的距离
+            marginRight: 15 //相对父window右外边距的距离
+        },
+        animation: {
+            type: "movein",
+            subType: "from_right",
+            duration: 500
+        }
+    })
 }
 
 /**
