--- a/widget/html/addHistory.html
+++ b/widget/html/addHistory.html
@@ -29,7 +29,7 @@
         </header>
         <div id="main">
             <!-- <div class="field" onclick="openWin('addPatient')"> -->
-            <div class="field" onclick="openFrame('addPatient')">
+            <div class="field" onclick="openFrame('patient')">
                 <div class="field_name">患者信息</div>
                 <div class="more"><span>&gt;</span></div>
             </div>
