重命名addHistory为history，清楚不再使用的文件

--- a/widget/historyList.html
+++ b/widget/historyList.html
@@ -50,7 +50,7 @@
                 <a href="" tapmode="presshover" onclick="openSearch()">查找</a>
             </div>
             <div class='top-button fr'>
-                <a href="" tapmode="presshover" onclick="openWin('addHistory')">新增</a>
+                <a href="" tapmode="presshover" onclick="openWin('history')">新增</a>
             </div>
         </header>
         <div id="main" class="flex-con">
