--- a/widget/html/viewHistory.html
+++ b/widget/html/viewHistory.html
@@ -151,7 +151,7 @@ function openWin(type) {
             reload = false;
             break;
         case "modiHistory":
-            page = "addHistory";
+            page = "history";
             pageParam = {
                 "data": api.pageParam,
                 "type": "modi"
