化子页面悬浮效果

--- a/widget/html/viewPatient.html
+++ b/widget/html/viewPatient.html
@@ -24,7 +24,7 @@
                     <span id="title">患者信息</span>
                 </div>
                 <a id="right">
-                    <span></span>
+                    <span>修改</span>
                 </a>
             </nav>
         </header>
