--- a/widget/html/viewHistory.html
+++ b/widget/html/viewHistory.html
@@ -118,10 +118,10 @@ function openFrame(page) {
         reload: false,
         bounces: true,
         rect: {
-            marginLeft: 10, //相对父window左外边距的距离
-            marginTop: 10, //相对父window上外边距的距离
-            marginBottom: 10, //相对父window下外边距的距离
-            marginRight: 10 //相对父window右外边距的距离
+            marginLeft: 10,
+            marginTop: 10,
+            marginBottom: 10,
+            marginRight: 10
         },
         animation: {
             type: "movein",
