--- a/widget/html/viewPatient.html
+++ b/widget/html/viewPatient.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <title>患者信息</title>
-    <!-- <link rel="stylesheet" type="text/css" href="../css/api.css" /> -->
-    <!-- <link rel="stylesheet" type="text/css" href="../css/style.css" /> -->
     <link rel="stylesheet" type="text/css" href="../css/newpatient.css" />
     <script type="text/javascript" src="../script/api.js"></script>
     <script type="text/javascript" src="../script/util.js"></script>
@@ -16,7 +14,6 @@
     <div id="wrap" class="flex-wrap flex-vertical">
         <header id='header'>
             <nav id="nav">
-                <!-- <a id="left" tapmode="" onclick="window.closeWin();"> -->
                 <a id="left" tapmode="" onclick="window.closeFrame();">
                     <span>返回</span>
                 </a>
@@ -87,21 +84,17 @@
     </div>
 </body>
 <script type="text/javascript">
+/**
+ * [apiready description]
+ * @return {[type]} [description]
+ */
 apiready = function() {
-    // $api.fixStatusBar($api.dom('header'));
     $api.fixIos7Bar($api.dom('header'));
-    // var header = document.querySelector('#header');
-    // $api.fixIos7Bar(header);
-    window.closeWin = function(winName) {
-        // returnPatient();
-        api.closeWin();
-    }
-
     window.closeFrame = function(frameName) {
-        // returnPatient();
         api.closeFrame();
     }
 
+    // 设置页面字段readonly
     $api.attr($api.byId('name'), 'readonly', 'true');
     $api.attr($api.byId('gender'), 'readonly', 'true');
     $api.attr($api.byId('birthday'), 'readonly', 'true');
@@ -112,13 +105,12 @@ apiready = function() {
     $api.attr($api.byId('address'), 'readonly', 'true');
     $api.attr($api.byId('job'), 'readonly', 'true');
 
+    // 从病历主页面传的值，赋给本页面
     if (api.pageParam.data.length != 0) {
         data = api.pageParam.data;
         setPatient(data);
     }
-
 }
-
 </script>
 
 </html>
