修改页面切换动画”

--- a/widget/html/history.html
+++ b/widget/html/history.html
@@ -263,7 +263,7 @@ function openFrame(type) {
             marginRight: 0
         },
         animation: {
-            type: "movein",
+            type: "fade",
             subType: "from_right",
             duration: 500
         }
