--- a/widget/html/history.html
+++ b/widget/html/history.html
@@ -29,7 +29,7 @@
         </header>
         <div id="main">
             <div class="field" onclick="openFrame('patient')">
-                <div class="field_name">患者信息</div>
+                <div class="field_name">维护患者信息</div>
                 <div class="more"><span>&gt;</span></div>
             </div>
             <div class="field">
