--- a/widget/html/viewPatient.html
+++ b/widget/html/viewPatient.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <title>患者信息</title>
     <link rel="stylesheet" type="text/css" href="../css/patient.css" />
+    <link rel="stylesheet" type="text/css" href="../css/button.css" />
     <script type="text/javascript" src="../script/api.js"></script>
     <script type="text/javascript" src="../script/util.js"></script>
 </head>
@@ -14,14 +15,13 @@
     <div id="wrap" class="flex-wrap flex-vertical">
         <header id='header'>
             <nav id="nav">
-                <a id="left" tapmode="" onclick="window.closeFrame();">
-                    <span>返回</span>
+                <a id="left" tapmode="" onclick="window.closeFrame();" class="button button-raised button-royal">
+                    返回
                 </a>
                 <div id="middle">
                     <span id="title">患者信息</span>
                 </div>
-                <a id="right">
-                    <span>修改</span>
+                <a id="right" tapmode="" onclick="" class="button button-raised button-royal">
                 </a>
             </nav>
         </header>
