修改picker可循环, autohide为true试试

--- a/widget/html/patient.html
+++ b/widget/html/patient.html
@@ -161,8 +161,8 @@ function openPicker(type) {
             scope: ["男", "女"]
         }],
         rows: 3,
-        autoHide: false,
-        loop: false,
+        autoHide: true,
+        loop: true,
         fixedOn: "patient",
         fixed: true
     }, function(ret, err) {
